--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "个人博客",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./app.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,12 @@
   },
   "homepage": "https://github.com/SawWu/blog-portal#readme",
   "dependencies": {
-    "express": "^4.16.2"
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "cookies": "^0.7.1",
+    "express": "^4.16.2",
+    "markdown": "^0.5.0",
+    "mongoose": "^5.0.0-rc0",
+    "swig": "^1.4.2"
   }
 }
